--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,7 @@
     </dependency>
     <dependency>
       <groupId>com.pholser</groupId>
-      <artifactId>junit-quickcheck-generators</artifactId>
+      <artifactId>junit-quickcheck-poker.generators</artifactId>
       <version>0.7</version>
       <scope>test</scope>
     </dependency>
